--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+.main-div {
+  width: 80%;
+  margin: auto;
+  padding: 20px;
+  display: flex;
+}
+
+.first-panel {
+  flex-basis: 17%;
+  padding: 10px 0;
+  margin-right: 20px;
+}
+
+
+.second-panel {
+  flex-basis: 75%;
+  padding: 10px 20px;
+}
